--- a/src/app/supermarkets-list/supermarkets-list.component.html
+++ b/src/app/supermarkets-list/supermarkets-list.component.html
@@ -1,5 +1,12 @@
-<ul>
+<!-- <ul>
   <li (click)=onSelect(supermarket) *ngFor="let supermarket of supermarkets">
     <button type="button" class="btn btn-info mt-4"><a>{{supermarket.name}}</a></button>
   </li>
-</ul>
+</ul> -->
+<div class="map-wrapper">
+  <div class="map-border">
+    <div id="map">
+
+    </div>
+  </div>
+</div>
