--- a/src/app/supermarkets-list/supermarkets-list.component.html
+++ b/src/app/supermarkets-list/supermarkets-list.component.html
@@ -3,10 +3,7 @@
     <button type="button" class="btn btn-info mt-4"><a>{{supermarket.name}}</a></button>
   </li>
 </ul> -->
-<div class="map-wrapper">
-  <div class="map-border">
-    <div id="map">
-
-    </div>
+<div class="container-md" id="fill">
+  <div id="map">
   </div>
 </div>
