--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,30 @@
-<!--BOOTSTRAP 4-->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
 <!-- A grey horizontal navbar that becomes vertical on small screens -->
-<nav class="navbar navbar-expand-lg bg-dark">
-  <div class="navbar-header">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
     <a class="navbar-brand" href="#">Satisfood</a>
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/home" routerLinkActive="active">Home<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/about-us" routerLinkActive="active">About us</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/supermarkets" routerLinkActive="active">Supermarkets</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+          <a class="nav-link" href="">Login</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" href="">Signup</a>
+      </li>
+    </ul>
   </div>
-  <!-- Links -->
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
-    </li>
-    <li>
-      <a class="nav-link" routerLink="/about-us" routerLinkActive="active">About Us</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/supermarkets" routerLinkActive="active">Supermakets</a>
-    </li>
-  </ul>
-  <ul class="navbar-nav ml-auto">
-    <li class="nav-item active">
-        <a class="nav-link" href="">Login</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="">Signup</a>
-    </li>
-</ul>
 </nav>
 <div class="container">
   <router-outlet></router-outlet>
