--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 @import "~leaflet/dist/leaflet.css";
+
+@import 'bootstrap/dist/css/bootstrap-grid.min.css';
+@import 'bootstrap/dist/css/bootstrap-reboot.min.css';
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
